--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="favicon.ico">
+    <title>安博客</title>
   </head>
   <style>
     *{
@@ -15,19 +15,16 @@
     body {
       position: relative;
     }
-    /*::-webkit-scrollbar {*/
-    /*  display: none; !* Chrome Safari *!*/
-    /*  scrollbar-width: none; !* firefox *!*/
-    /*  -ms-overflow-style: none; !* IE 10+ *!*/
-    /*  !*overflow-x: hidden;*!*/
-    /*  overflow-y: auto;*/
-    /*}*/
+    ::-webkit-scrollbar {
+      display: none; /* Chrome Safari */
+      scrollbar-width: none; /* firefox */
+      -ms-overflow-style: none; /* IE 10+ */
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
 
   </style>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
